XIVY-3824 Migrate to Primefaces 11
- Fix LazyDataModels by using LegacyLazyDataModel
- Fix dataTable sorting attributes
- Rename dataTable column priority attribute to responsivePriority
- Convert DefaultStreamedContent constructor to builder
- Convert DefaultMenuItem constructor to builder

--- a/dev-workflow-ui/webContent/includes/components/allTasksTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/allTasksTable.xhtml
@@ -6,7 +6,7 @@
 
   <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable" style="margin-top:10px"
     emptyMessage="No Tasks found with given criteria" lazy="true" paginatorPosition="bottom" rowsPerPageTemplate="10,20,50"
-    rows="10" paginator="true" paginatorAlwaysVisible="false" sortBy="#{task.startTimestamp}" sortOrder="descending"
+    rows="10" paginator="true" paginatorAlwaysVisible="false"
     selectionMode="single"
     paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
     <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.displayTaskRow}" update="@form" />
@@ -39,15 +39,15 @@
       <jc:user user="#{task.activator}" />
     </p:column>
 
-    <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}" priority="2">
+    <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="2">
       <jc:datetime id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" priority="3">
+    <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" responsivePriority="3">
       <jc:datetime id="endTime" datetime="#{task.endTimestamp}"/>
     </p:column>
 
-    <p:column styleClass="icon-row" priority="2">
+    <p:column styleClass="icon-row" responsivePriority="2">
       <h:link outcome="taskDetails">
         <f:param name="task" value="#{task.id}" />
         <i class="si si-lg si-information-circle"></i>
