--- a/dev-workflow-ui/webContent/includes/components/userTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/userTable.xhtml
@@ -9,7 +9,7 @@
       <h:outputText value="Click user to login" />
       <p:dataTable id="users" var="user" value="#{loginTableIvyDevWfBean.users}" widgetVar="usersTable"
         emptyMessage="No users found with given criteria" style="margin-top:10px" selection="#{loginTableIvyDevWfBean.currentUser}"
-        selectionMode="single" rowKey="#{user.fullname}" sortBy="#{user.name}">
+        selectionMode="single" rowKey="#{user.fullname}">
         <p:ajax event="rowSelect" listener="#{loginIvyDevWfBean.loginFromTable}" update="@form" />
 
         <f:facet name="header">
@@ -20,7 +20,7 @@
           </p:outputPanel>
         </f:facet>
 
-        <p:column headerText="Username" filterBy="#{user.name}" sortBy="#{user.name}">
+        <p:column headerText="Username" filterBy="#{user.name}" sortBy="#{user.name}" sortOrder="ascending">
           <h:outputText value="#{user.name}">
             <i class="si si-single-neutral-actions table-icon"></i>
           </h:outputText>
