Fix container style

--- a/dev-workflow-ui/webContent/resources/css/horizontal-container.css
+++ b/dev-workflow-ui/webContent/resources/css/horizontal-container.css
@@ -2,6 +2,7 @@
   .layout-topbar-menu-wrapper, .container {
     max-width: 1170px;
     margin: 0 auto;
+    padding: 0;
   }
   .container .topbar-logo {
     margin-right: 0;
