--- a/dev-workflow-ui/webContent/view/intermediateEventDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/intermediateEventDetails.xhtml
@@ -14,7 +14,7 @@
 
       <h:form id="intermediateElementDetailsForm">
         <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <div class="task-detail-title straight-text-icon">
+          <div class="detail-card-title">
             <i class="si si-lg si-common-file-text detail-title-icon" />
             <h:outputText value="Description" />
           </div>
@@ -34,7 +34,7 @@
         </h:panelGroup>
 
         <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <div class="task-detail-title straight-text-icon">
+          <div class="detail-card-title">
             <i class="si si-lg si-analytics-graph margin-right-5" />
             <h:outputText value="Events" />
           </div>
