--- a/dev-workflow-ui/webContent/includes/components/caseDetails/caseList.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/caseList.xhtml
@@ -4,7 +4,7 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://java.sun.com/jsf/composite/components">
 
-  <h:panelGroup layout="block" class="action-container #{casesDetailsIvyDevWfBean.isCurrentHierarchyCase(casesDetailsIvyDevWfBean.selectedCase.getBusinessCase())}">
+  <h:panelGroup layout="block" class="#{casesDetailsIvyDevWfBean.isCurrentHierarchyCase(casesDetailsIvyDevWfBean.selectedCase.getBusinessCase())}">
     <jc:caseLink case="#{casesDetailsIvyDevWfBean.selectedCase.getBusinessCase()}" id="businessCase"/>
   </h:panelGroup>
 
