--- a/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
@@ -10,21 +10,25 @@
 <cc:implementation>
   <p:panel id="startElement" styleClass="start-element" rendered="#{cc.attrs.pmv.active}">
     <p:commandLink actionListener="#{cc.attrs.start.execute}" styleClass="flex-space start-link width-100">
-      <span class="straight-text-icon">
-        <i id="startableIcon" class="#{cc.attrs.start.icon} margin-right-5"></i>
+      <span class="straight-text-icon"> <i id="startableIcon" class="#{cc.attrs.start.icon} margin-right-5"></i>
         <span>#{cc.attrs.start.displayName}</span>
       </span>
       <span>#{cc.attrs.start.description}</span>
     </p:commandLink>
-    <p:link id="openStartFullscreenBtn" href="#{cc.attrs.start.link}" styleClass="margin-right-10" rendered="#{cc.attrs.start.embedInFrame}">
-      <i class="si si-expand-6"/>
+    <p:link id="openStartFullscreenBtn" href="#{cc.attrs.start.link}" styleClass="margin-right-10"
+      rendered="#{cc.attrs.start.embedInFrame}">
+      <i class="si si-expand-6" />
     </p:link>
-    <p:tooltip for="openStartFullscreenBtn" value="Open start on a fullscreen page. Add 'embedInFrame' request custom field to set this as default."
-     position="left"/>
-    <p:link id="openProcessViewer" href="#{cc.attrs.start.viewerUrl}" styleClass="margin-right-10" rendered="#{cc.attrs.start.processStart and loginIvyDevWfBean.loggedIn}">
-      <i class="si si-hierarchy-6 si-rotate-270"/>
-    </p:link>
-    <p:tooltip for="openProcessViewer" value="Open Process Viewer." position="left"/>
+    <p:tooltip for="openStartFullscreenBtn"
+      value="Open start on a fullscreen page. Add 'embedInFrame' request custom field to set this as default."
+      position="left" />
+    <p:commandLink id="openProcessViewer" oncomplete="PF('process-viewer-dlg').show()" styleClass="margin-right-10"
+      rendered="#{loginIvyDevWfBean.loggedIn}" update="startsForm:processViewerDialog"
+      actionListener="#{viewerIvyDevWfBean.setStartable(cc.attrs.start)}">
+      <i class="si si-hierarchy-6 si-rotate-270" />
+    </p:commandLink>
+    <p:tooltip for="openProcessViewer" position="left"
+      value="#{cc.attrs.start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map UI'}" />
   </p:panel>
 </cc:implementation>
 </html>
