--- a/dev-workflow-ui/webContent/view/caseDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/caseDetails.xhtml
@@ -13,82 +13,114 @@
     <ui:define name="content">
 
       <h:form id="form">
+
         <p:panelGrid columns="2" layout="grid" styleClass="ui-panelgrid-blank grid-smaller-padding"
           columnClasses="ui-g-12 ui-lg-8, ui-g-12 ui-lg-4">
 
           <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-            <div class="task-detail-title straight-text-icon">
-              <i class="si si-lg si-common-file-text detail-title-icon" />
-              <h:outputText value="Description" />
-              <div class="task-detail-action-container action-container">
-                <p:commandLink value="Destroy case" update="form" actionListener="#{casesDetailsIvyDevWfBean.selectedCase.destroy}"
-                  class="task-action-item straight-text-icon" id="caseDestroyBtn" disabled="#{not casesDetailsIvyDevWfBean.canBeDestoryed()}">
-                  <i class="si si-close detail-action-icon-bold"></i>
-                </p:commandLink>
+            <div class="detail-card-header">
+              <div class="detail-card-title">
+                <i class="si si-lg si-common-file-text detail-title-icon" />
+                <h:outputText value="Description" />
               </div>
+              <p:commandLink value="Destroy case" class="straight-text-icon margin-right-5"
+                disabled="#{not casesDetailsIvyDevWfBean.canBeDestoryed()}" id="caseDestroyBtn"
+                actionListener="#{casesDetailsIvyDevWfBean.selectedCase.destroy}" update="form">
+                <i class="si si-delete-1 detail-action-icon" />
+              </p:commandLink>
             </div>
+            <p:separator />
             <ui:include src="/includes/components/caseDetails/description.xhtml" />
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card"
-            layout="block">
+          <h:panelGroup styleClass="card card-w-title custom-card casemap-card" layout="block"
+            rendered="#{casesDetailsIvyDevWfBean.caseMap}">
             <div>
-              <h:panelGroup layout="block" styleClass="task-detail-title related-element flex-space">
-                <div class="straight-text-icon ">
+              <h:panelGroup layout="block" styleClass="flex-space">
+                <div class="straight-text-icon detail-card-title">
                   <i class="si si-lg si-information-circle detail-title-icon" />
                   <h:outputText value="Case Map" />
                 </div>
-                <div>
-                  <p:commandLink value="Sidesteps" class="task-actions-link straight-text-icon" id="sidestepsBtn"
-                  rendered="#{not empty casesDetailsIvyDevWfBean.sidesteps}">
-                    <i class="si si-arrow-down-1 detail-action-icon"/>
-                  </p:commandLink>
-                  <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
-                   model="#{casesDetailsIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons"/>
+                <div class="straight-text-icon">
+                  <h:panelGroup layout="block" rendered="#{not empty casesDetailsIvyDevWfBean.sidesteps}">
+                    <p:commandLink value="Sidesteps" class="straight-text-icon margin-right-10" id="sidestepsBtn">
+                      <i class="si si-arrow-down-1 detail-action-icon" />
+                    </p:commandLink>
+                    <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
+                      model="#{casesDetailsIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
+                  </h:panelGroup>
                 </div>
               </h:panelGroup>
-              <ui:include src="/includes/components/caseDetails/caseMap.xhtml" />
+              <p:separator />
+            </div>
+            <ui:include src="/includes/components/caseDetails/caseMap.xhtml" />
+            <p:commandLink id="openCaseMapUiViewerBtn" class="margin-right-10 straight-text-icon flex-center"
+              oncomplete="PF('process-viewer-dlg').show()" update="@form" actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}">
+              <h:outputText value="Open Case Map UI" styleClass="margin-right-5"/>
+              <i class="si si-expand-6" />
+            </p:commandLink>
+          </h:panelGroup>
+
+          <h:panelGroup styleClass="card card-w-title custom-card casemap-card" layout="block"
+            rendered="#{!casesDetailsIvyDevWfBean.caseMap}">
+            <div>
+              <h:panelGroup layout="block" styleClass="flex-space">
+                <div class="straight-text-icon detail-card-title">
+                  <i class="si si-lg si-information-circle detail-title-icon" />
+                  <h:outputText value="Process Viewer" />
+                </div>
+                <p:commandLink id="openProcessViewerBtn" styleClass="margin-right-10"
+                  actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}"
+                  oncomplete="PF('process-viewer-dlg').show()" update="@form">
+                  <i class="si si-expand-6" />
+                </p:commandLink>
+              </h:panelGroup>
+              <p:separator />
+            </div>
+            <div class="flex-center height-100">
+              <p:commandLink id="cardOpenprocessViewerBtn" styleClass="straight-text-icon"
+                actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}"
+                oncomplete="PF('process-viewer-dlg').show()" update="@form">
+                <i class="si si-layers-grid-settings margin-right-5" />
+                <h:outputText value="Open Process Viewer" />
+              </p:commandLink>
             </div>
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card"
-            layout="block">
-            <h:panelGroup styleClass="table-title-switch">
-              <h:panelGroup id="cardTitleContainer" styleClass="task-detail-title straight-text-icon related-element">
+          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
+            <h:panelGroup styleClass="table-title-switch related-element">
+              <h:panelGroup id="cardTitleContainer" styleClass="detail-card-title">
                 <i class="si si-lg si-task-list-approve detail-title-icon" />
                 <h:outputText value="Task list" />
               </h:panelGroup>
-              <h:panelGroup id="switchContainer" styleClass="straight-text-icon related-element">
-                <h:outputText value="Show system tasks" class="margin-right-10"/>
+              <h:panelGroup id="switchContainer" styleClass="straight-text-icon">
+                <h:outputText value="Show system tasks" class="margin-right-10" />
                 <p:toggleSwitch id="showSystemTasksSwitch" value="#{casesDetailsIvyDevWfBean.showSystemTasks}">
-                  <p:ajax update="tasks"/>
+                  <p:ajax update="form:tasks" />
                 </p:toggleSwitch>
               </h:panelGroup>
             </h:panelGroup>
             <ui:include src="/includes/components/caseDetails/taskList.xhtml" />
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card"
-            layout="block">
-            <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
+          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
+            <h:panelGroup layout="block" styleClass="detail-card-title related-element">
               <i class="si si-lg si-task-list-approve detail-title-icon" />
               <h:outputText value="Case hierarchy" />
             </h:panelGroup>
             <ui:include src="/includes/components/caseDetails/caseList.xhtml" />
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card"
-            layout="block">
-            <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
+          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
+            <h:panelGroup layout="block" styleClass="detail-card-title related-element">
               <i class="si si-lg si-cog detail-title-icon" />
               <h:outputText value="Custom fields" />
             </h:panelGroup>
-            <jc:customFields id="customFields" customFields="#{casesDetailsIvyDevWfBean.customFields}"/>
+            <jc:customFields id="customFields" customFields="#{casesDetailsIvyDevWfBean.customFields}" />
           </h:panelGroup>
 
-          <h:panelGroup id="documentsContainer" styleClass="card card-w-title custom-card"
-            layout="block">
-            <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
+          <h:panelGroup id="documentsContainer" styleClass="card card-w-title custom-card" layout="block">
+            <h:panelGroup layout="block" styleClass="detail-card-title related-element">
               <i class="si si-lg si-office-file-doc-1 detail-title-icon" />
               <h:outputText value="Documents" />
             </h:panelGroup>
@@ -98,12 +130,25 @@
         </p:panelGrid>
 
         <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <div class="task-detail-title straight-text-icon">
+          <div class="detail-card-title related-element">
             <i class="si si-lg si-synchronize-arrow-clock detail-title-icon" />
             <h:outputText value="Workflow Events" />
           </div>
-          <jc:workflowEventsTable id="workflowEvents" workflowEvents="#{casesDetailsIvyDevWfBean.workflowEvents}"/>
+          <jc:workflowEventsTable id="workflowEvents" workflowEvents="#{casesDetailsIvyDevWfBean.workflowEvents}" />
         </h:panelGroup>
+
+        <p:dialog id="processViewerDialog" widgetVar="process-viewer-dlg" width="80%" showEffect="fade" modal="true"
+          style="margin-top: 6em">
+          <f:facet name="header">
+            <h:outputText value="#{casesDetailsIvyDevWfBean.viewerDialogTitle}" styleClass="margin-right-10" />
+            <p:link id="openViewerNewPage" styleClass="staight-text-icon"
+              href="#{casesDetailsIvyDevWfBean.viewerLink}">
+              <i class="si si-expand-6" style="font-size: 0.75em" />
+            </p:link>
+          </f:facet>
+          <iframe id="viewerFrame" src="#{casesDetailsIvyDevWfBean.viewerLink}"
+            style="height: calc(100vh - 195px); width: 100%; border: 0;" />
+        </p:dialog>
 
       </h:form>
 
