--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -7,6 +7,7 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <f:event type="preRenderView" listener="#{homepageIvyDevWfBean.redirectIfNoTasksOrLastStarts}" />
+
       <h:panelGroup layout="block" rendered="#{!loginIvyDevWfBean.loggedIn}"
         styleClass="ui-message ui-staticmessage ui-message-warn">
         <span class="ui-message-warn-icon"></span>
@@ -16,7 +17,21 @@
           features.
         </span>
       </h:panelGroup>
+
       <h:form id="form">
+
+        <p:dialog id="processViewerDialog" widgetVar="process-viewer-dlg" width="80%" showEffect="fade" modal="true"
+          style="margin-top: 6em">
+          <f:facet name="header">
+            <h:outputText value="#{viewerIvyDevWfBean.viewerDialogTitle}" styleClass="margin-right-10" />
+            <p:link id="openViewerNewPage" styleClass="staight-text-icon" href="#{viewerIvyDevWfBean.viewerLink}">
+              <i class="si si-expand-6" style="font-size: 0.75em" />
+            </p:link>
+          </f:facet>
+          <iframe id="iFrame" src="#{viewerIvyDevWfBean.viewerLink}"
+            style="height: calc(100vh - 195px); width: 100%; border: 0;" />
+        </p:dialog>
+
         <p:panelGrid columns="2" layout="grid" styleClass="custom-grid" columnClasses="ui-g-12 ui-lg-4, ui-g-12 ui-lg-8"
           rendered="#{loginIvyDevWfBean.loggedIn}">
 
@@ -39,10 +54,12 @@
                       <i class="si si-expand-6" />
                     </p:link>
                     <p:tooltip for="openStartFullscreenBtn" value="Open start on a fullscreen page" position="top" rendered="#{start.embedInFrame}" />
-                    <p:link id="openProcessViewer" href="#{start.viewerUrl}" styleClass="margin-right-10" rendered="#{start.processStart}">
-                      <i class="si si-hierarchy-6 si-rotate-270"/>
-                    </p:link>
-                    <p:tooltip for="openProcessViewer" value="Open Process Viewer." position="top"/>
+                    <p:commandLink id="openProcessViewer" oncomplete="PF('process-viewer-dlg').show()" styleClass="margin-right-10"
+                      update="form:processViewerDialog" actionListener="#{viewerIvyDevWfBean.setStartable(start)}">
+                      <i class="si si-hierarchy-6 si-rotate-270" />
+                    </p:commandLink>
+                    <p:tooltip for="openProcessViewer" position="top"
+                      value="#{start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map UI'}" />
                   </div>
                 </div>
               </p:column>
