Refactor dialogTitle function to ViewerUtil, change spelling

--- a/dev-workflow-ui/webContent/view/taskDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/taskDetails.xhtml
@@ -49,7 +49,7 @@
         <p:dialog id="processViewerDialog" widgetVar="process-viewer-dlg" width="80%" showEffect="fade" modal="true"
           style="margin-top: 6em">
           <f:facet name="header">
-            <h:outputText value="Process Viewer for: #{tasksDetailsIvyDevWfBean.selectedTask.name}" styleClass="margin-right-10" />
+            <h:outputText value="Process of: #{tasksDetailsIvyDevWfBean.selectedTask.name}" styleClass="margin-right-10" />
             <p:link id="openViewerNewPage" styleClass="staight-text-icon" href="#{tasksDetailsIvyDevWfBean.selectedTask.viewerLink}">
               <i class="si si-expand-6" style="font-size: 0.75em" />
             </p:link>
