Adjust icon in process viewer card, add CaseMapStartableModel, adjust casemapurl creation

--- a/dev-workflow-ui/webContent/view/caseDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/caseDetails.xhtml
@@ -81,7 +81,7 @@
               <p:commandLink id="cardOpenprocessViewerBtn" styleClass="straight-text-icon"
                 actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}"
                 oncomplete="PF('process-viewer-dlg').show()" update="@form">
-                <i class="si si-layers-grid-settings margin-right-5" />
+                <i class="si si-hierarchy-6 si-rotate-270 margin-right-5" />
                 <h:outputText value="Open Process Viewer" />
               </p:commandLink>
             </div>
