Add copy to clipboard btn to start link
- Fix NPE in FrameIvyDevWfBean

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -13,6 +13,7 @@
   <h:outputScript name="js/layout.js" library="serenity-layout" />
   <h:outputScript name="js/ripple.js" library="serenity-layout" />
   <h:outputScript name="resources/js/polyfill.js" />
+  <h:outputScript name="resources/js/copyToClipboard.js" />
   <h:outputStylesheet name="css/nanoscroller.css" library="serenity-layout" />
   <h:outputStylesheet name="css/ripple.css" library="serenity-layout" />
   <h:outputStylesheet name="css/layout-ivy-designer.css" library="serenity-layout" />
