--- a/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
@@ -15,6 +15,10 @@
       </span>
       <span>#{cc.attrs.start.description}</span>
     </p:commandLink>
+    <p:link id="copyStartLinkBtn" href="#" onclick="copyToClipboard('#{cc.attrs.start.link}')" styleClass="margin-right-10">
+      <i class="si si-copy-paste" />
+    </p:link>
+    <p:tooltip for="copyStartLinkBtn" value="Copy to clipboard" position="left" />
     <p:link id="openStartFullscreenBtn" href="#{cc.attrs.start.link}" styleClass="margin-right-10"
       rendered="#{cc.attrs.start.embedInFrame}">
       <i class="si si-expand-6" />
