Rename "Case Map UI" to "Case Map Viewer" tooltip

--- a/dev-workflow-ui/webContent/view/caseDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/caseDetails.xhtml
@@ -56,7 +56,7 @@
             <ui:include src="/includes/components/caseDetails/caseMap.xhtml" />
             <p:commandLink id="openCaseMapUiViewerBtn" class="margin-right-10 straight-text-icon flex-center"
               oncomplete="PF('process-viewer-dlg').show()" update="@form" actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}">
-              <h:outputText value="Open Case Map UI" styleClass="margin-right-5"/>
+              <h:outputText value="Open Case Map Viewer" styleClass="margin-right-5"/>
               <i class="si si-expand-6" />
             </p:commandLink>
           </h:panelGroup>
