--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -59,7 +59,7 @@
                       <i class="si si-hierarchy-6 si-rotate-270" />
                     </p:commandLink>
                     <p:tooltip for="openProcessViewer" position="top"
-                      value="#{start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map UI'}" />
+                      value="#{start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map Viewer'}" />
                   </div>
                 </div>
               </p:column>
