--- a/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
@@ -28,7 +28,7 @@
       <i class="si si-hierarchy-6 si-rotate-270" />
     </p:commandLink>
     <p:tooltip for="openProcessViewer" position="left"
-      value="#{cc.attrs.start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map UI'}" />
+      value="#{cc.attrs.start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map Viewer'}" />
   </p:panel>
 </cc:implementation>
 </html>
